  - Removed all shadow lint in header files (STR #2714).
  - Fixed pulldown menu position when at the bottom of the screen (STR #2880).
  - Fixed missing item handling in Fl_Chekc_Browser (STR #3480).
  - Fixed Delete key in Fl_Input deleting entire widgets in Fluid (STR #2841).
  - Reorganized Fluid Template feature (STR #3336).
  - Updated Fluid documentation and image (STR #3328).
  - Duplicating Widget Class in Fluid no longer crashes (STR #3445).
  - Fl_Check_Browser::add(item) now accepts NULL (STR #3498).
  - Interface to set maximum width of spinner text field (STR #3386).
  - Fl_Text_Display no longer wiggles (STR #2531).
  - Fixed Help_View return value (STR #3430).
  - Fix 'fluid.app' on case sensitive macOS (was: Fluid.app).
  - Fix FL_PUSH event handling of Fl_Check_Browser (STR #3004).
  - Fix a potential crash when a program exits before it opens a window
    (Windows only, STR #3484).
  - Fix Fl_PNG_Image error handling. An error was potentially caused
    by error handling of the image library with setjmp/longjmp.
  - Fix Fl_Browser background and text color parsing (STR #3376).
  - Fix Windows CreateDC/DeleteDC mismatch (STR #3373).
  - Fix Fl_Tabs label drawing for Fl_Window children (STR #3075).
  - Fix line number alignment in Fl_Text_Display/Editor (STR #3363).
  - Fix ignored buffer pre-allocation (requestedSize) in Fl_Text_Buffer.
    See fltk.general "Fl_Text_Buffer constructor bug" on Dec 5, 2016.
  - Fix build with configure --enable-cairo --enable-cairoext,
    see this report in fltk.general:
    https://groups.google.com/forum/#!topic/fltkgeneral/x80qQ6wt0s4


  Removed Features

  - Bundled IDE project files (Xcode and Visual Studio) have been
    removed. Please use CMake to generate your IDE project files.
    See README.CMake.txt for more information.


Changes in FLTK 1.3

  See CHANGES_1.3.txt


Changes in FLTK 1.1

  See CHANGES_1.1.txt


Changes in FLTK 1.0

  See CHANGES_1.0.txt