@@ -572,8 +572,7 @@ INPUT += @CMAKE_CURRENT_SOURCE_DIR@/src/enumerations.dox
 INPUT += @CMAKE_CURRENT_SOURCE_DIR@/src/glut.dox
 INPUT += @CMAKE_CURRENT_SOURCE_DIR@/src/forms.dox
 INPUT += @CMAKE_CURRENT_SOURCE_DIR@/src/osissues.dox
-INPUT += @CMAKE_CURRENT_SOURCE_DIR@/src/migration_1_1.dox
-INPUT += @CMAKE_CURRENT_SOURCE_DIR@/src/migration_1_3.dox
+INPUT += @CMAKE_CURRENT_SOURCE_DIR@/src/migration_1_4.dox
 INPUT += @CMAKE_CURRENT_SOURCE_DIR@/src/development.dox
 INPUT += @CMAKE_CURRENT_SOURCE_DIR@/src/license.dox
 INPUT += @CMAKE_CURRENT_SOURCE_DIR@/src/examples.dox
