@@ -315,9 +315,9 @@ The following code gives the navigation bar at the bottom of this page:
 <table summary="navigation bar" width="100%" border="0">
 <tr>
   <td width="45%" align="LEFT">
-    <a class="el" href="migration_1_3.html">
+    <a class="el" href="migration_1_4.html">
     [Prev]
-    Migrating Code from FLTK 1.1 to 1.3
+    Migrating Code from FLTK 1.3 to 1.4
     </a>
   </td>
   <td width="10%" align="CENTER">
@@ -340,9 +340,9 @@ The following code gives the navigation bar at the bottom of this page:
 <table summary="navigation bar" width="100%" border="0">
 <tr>
   <td width="45%" align="LEFT">
-    <a class="el" href="migration_1_3.html">
+    <a class="el" href="migration_1_4.html">
     [Prev]
-    Migrating Code from FLTK 1.1 to 1.3
+    Migrating Code from FLTK 1.3 to 1.4
     </a>
   </td>
   <td width="10%" align="CENTER">
