@@ -32,8 +32,7 @@ This manual is organized into the following chapters and appendices:
 \li \ref glut
 \li \ref forms
 \li \ref osissues
-\li \ref migration_1_1
-\li \ref migration_1_3
+\li \ref migration_1_4
 \li \ref development
 \li \ref license
 \li \ref examples
@@ -76,7 +75,7 @@ was dropped after FLTK 1.0.10. FLTK uses the preprocessor definition
 
 \section preface_copyrights Copyrights and Trademarks
 
-FLTK is Copyright 1998-2018 by Bill Spitzak and others.  Use and
+FLTK is Copyright 1998-2020 by Bill Spitzak and others.  Use and
 distribution of FLTK is governed by the GNU Library General Public
 License with 4 exceptions, located in \ref license.
 
